--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,8 @@
 body {
   margin: 5%;
-  font-family: 'Yanone Kaffeesatz', sans-serif;
-  background-color: #659DBD;
-  color: #f5f5f5;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: 'Roboto', sans-serif;
+  background-color: #f5f5f5;
+  color: #111111;
 }
 
 input {
@@ -50,14 +45,6 @@ button {
   height: auto;
   border: 1px solid #f5f5f5;
   color: #f5f5f5;
-}
-
-.header {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 2rem;
-  border-bottom: 2px solid #f5f5f5;
 }
 
 .storeFront {
