--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,38 @@
 body {
-  margin: 5%;
   font-family: 'Roboto', sans-serif;
   background-color: #f5f5f5;
   color: #111111;
 }
 
+.merch {
+  font-weight: bold;
+}
+
+.brand-section {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  height: 80%;
+  font-size: 1.25rem;
+}
+
+.brand-section h1 {
+  font-size: 3rem;
+}
+
+.navigation {
+  display: flex;
+  justify-content: center;
+}
+
+.navigation a {
+  color: #f5f5f5;
+  margin-right: 2%;
+  margin-top: 1%;
+  font-size: 1.5rem;
+  text-decoration: none;
+}
+/* 
 input {
   font-family: 'Yanone Kaffeesatz', sans-serif;
   color: #f5f5f5;
@@ -62,4 +90,4 @@ button {
 .buttons button {
   width: 40%;
   padding: 2%;
-}
+} */
