--- a/src/index.css
+++ b/src/index.css
@@ -32,6 +32,35 @@ body {
   font-size: 1.5rem;
   text-decoration: none;
 }
+
+.storeFront {
+  position: relative;
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+
+.adjustableButton {
+  position: relative;
+  height: 100px;
+  width: 100px;
+  border-radius: 50%;
+  border: 1px solid #82CA81;
+}
+
+.buttons {
+  display: flex;
+  justify-content: space-between;
+}
+
+.buttons button {
+  width: 40%;
+  padding: 2%;
+  color: #82CA81;
+  border: 1px solid #82CA81;
+  background-color: transparent;
+} 
+
 /* 
 input {
   font-family: 'Yanone Kaffeesatz', sans-serif;
@@ -73,21 +102,4 @@ button {
   height: auto;
   border: 1px solid #f5f5f5;
   color: #f5f5f5;
-}
-
-.storeFront {
-  margin-top: 2%;
-  display: flex;
-  justify-content: space-around;
-  flex-wrap: wrap;
-}
-
-.buttons {
-  display: flex;
-  justify-content: space-between;
-}
-
-.buttons button {
-  width: 40%;
-  padding: 2%;
-} */
+}*/
