--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,15 @@
 body {
   font-family: 'Roboto', sans-serif;
   background-color: #f5f5f5;
-  color: #111111;
+  color: #1A285A;
 }
 
 .merch {
-  font-weight: bold;
+  color: #1A285A;
+}
+
+.merchFooter {
+  color: #82CA81;
 }
 
 .brand-section {
@@ -33,8 +37,14 @@ body {
   text-decoration: none;
 }
 
+.navigation a:hover {
+  transform: scale(1.1);
+}
+
 .storeFront {
   position: relative;
+  width: 60vw;
+  margin: auto auto;
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
@@ -42,10 +52,27 @@ body {
 
 .adjustableButton {
   position: relative;
-  height: 100px;
-  width: 100px;
+  height: 125px;
+  width: 125px;
+  padding: 1%;
   border-radius: 50%;
   border: 1px solid #82CA81;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.adjustableButton button {
+  background-color: transparent;
+  color: #1A285A;
+  border: none;
+  outline: none;
+  box-shadow: none;
+  font-size: 2rem;
+}
+
+.adjustableButton button:hover {
+  transform: scale(1.25);
 }
 
 .buttons {
@@ -56,50 +83,25 @@ body {
 .buttons button {
   width: 40%;
   padding: 2%;
-  color: #82CA81;
+  color: #f5f5f5;
   border: 1px solid #82CA81;
-  background-color: transparent;
+  background-color: #82CA81;
 } 
 
-/* 
 input {
-  font-family: 'Yanone Kaffeesatz', sans-serif;
-  color: #f5f5f5;
-  width: 70%;
-  display: block;
-  margin: auto auto;
+  color: #1A285A;
   margin-bottom: 2%;
+  margin-right: 1%;
+  margin-left: 1%;
   background-color: transparent;
   outline: none;
   box-shadow: none;
-  height: 3rem;
-  font-size: 1.5rem;
-  border-radius: 5px;
-  border: 1px solid #f5f5f5;
+  border: 1px solid #82CA81;
   padding: 1%;
 }
 
-button {
-  font-family: 'Yanone Kaffeesatz', sans-serif;
+button.formButton {
+  height: 1.5rem;
+  background-color: #82CA81;
   color: #f5f5f5;
-  border-radius: 5px;
-  background-color: transparent;
-  border: 1px solid #f5f5f5;
-  box-shadow: none;
-  outline: none;
-  width: 25vw;
-  display: block;
-  margin: auto auto;
-  font-size: 1.5rem;
-  height: auto;
-  padding: 1%;
-  margin-top: 2%;
 }
-
-.buttonStyles {
-  width: 25vw;
-  font-size: 1.5rem;
-  height: auto;
-  border: 1px solid #f5f5f5;
-  color: #f5f5f5;
-}*/
